--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   visibility_detector: ^0.3.3
   google_fonts: 4.0.1
   go_router: 6.0.2
+  camera: ^0.11.1
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
