--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   go_router: 6.0.2
   camera: ^0.11.1
   permission_handler: ^11.4.0
+  image_picker: 0.8.6+1
 
 dev_dependencies:
   flutter_test:
