--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   camera: ^0.11.1
   permission_handler: ^11.4.0
   image_picker: 0.8.6+1
+  provider: 6.0.5
 
 dev_dependencies:
   flutter_test:
