--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: 0.8.6+1
   provider: 6.0.5
   shared_preferences: ^2.5.3
+  flutter_riverpod: ^2.1.3
 
 dev_dependencies:
   flutter_test:
