--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   provider: 6.0.5
   shared_preferences: ^2.5.3
   flutter_riverpod: ^2.1.3
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
+  firebase_storage: ^12.4.5
 
 dev_dependencies:
   flutter_test:
