--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
   firebase_storage: ^12.4.5
+  cloud_functions: ^5.4.0
+  firebase_app_check: ^0.3.2+5
 
 dev_dependencies:
   flutter_test:
