--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   firebase_storage: ^12.4.5
   cloud_functions: ^5.4.0
   firebase_app_check: ^0.3.2+5
+  firebase_messaging: ^15.2.5
 
 dev_dependencies:
   flutter_test:
